--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,18 +14,17 @@ keywords = ["network", "p2p", "gossip", "SWIM"]
 default = []
 
 [dependencies]
-async-std = { version = "1.12", default-features = false, features = [
-    "unstable",
-    "attributes",
-] }
 bincode = "1.3"
 color-eyre = "0.6"
-common_x = { version = "0.1", features = ["cert", "log"] }
+common_x = { version = "0.1", default-features = false, features = [
+    "cert",
+    "log",
+], path = "../common_x" }
 flume = "0.11"
-futures = "0.3"
 parking_lot = "0.12"
 quinn = "0.10"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
 
 [profile.dev]
