--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,11 @@ default = []
 [dependencies]
 bincode = "1.3"
 color-eyre = "0.6"
-common_x = { version = "0.1", default-features = false, features = [
-    "cert",
-    "log",
-], path = "../common_x" }
+common_x = { version = "0.2", features = ["cert", "log"] }
 flume = "0.11"
 parking_lot = "0.12"
 quinn = "0.10"
+rustls = "0.21"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
