--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,12 @@ common_x = { version = "0.2", features = ["cert", "log"] }
 flume = "0.11"
 parking_lot = "0.12"
 quinn = "0.10"
+rayon = "1.8"
 rustls = "0.21"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
+uhlc = "0.6"
 
 [profile.dev]
 debug = 0
@@ -37,12 +39,12 @@ lto = "thin"
 opt-level = "s"
 codegen-units = 1
 
-[workspace.lints.rust]
+[lints.rust]
 unsafe_code = "forbid"
 missing_copy_implementations = "warn"
 missing_debug_implementations = "warn"
 unused_crate_dependencies = "warn"
 unused_extern_crates = "warn"
 
-[workspace.lints.clippy]
+[lints.clippy]
 missing_const_for_fn = "warn"
