--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ common_x = { version = "0.2", features = ["cert", "log"] }
 flume = "0.11"
 parking_lot = "0.12"
 quinn = "0.10"
+rand = "0.8"
 rayon = "1.8"
 rustls = "0.21"
 serde = { version = "1.0", features = ["derive"] }
