--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ default = []
 
 [dependencies]
 bincode = "1.3"
+bitflags = "2.4"
 color-eyre = "0.6"
 common_x = { version = "0.2", features = ["cert", "log"] }
 flume = "0.11"
