--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ flume = "0.11"
 parking_lot = "0.12"
 quinn = "0.10"
 rand = "0.8"
+rand_chacha = "0.3"
 rayon = "1.8"
 rustls = "0.21"
 serde = { version = "1.0", features = ["derive"] }
