--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ async-lock = "3.2"
 bincode = "1.3"
 bitflags = "2.4"
 color-eyre = "0.6"
-common_x = { version = "0.2", features = ["cert", "log"], path = "../common_x" }
+common_x = { version = "0.2", features = ["cert", "log"] }
 flume = "0.11"
 quinn = "0.10"
 rand = "0.8"
