--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,15 @@ async-lock = "3.2"
 bincode = "1.3"
 bitflags = "2.4"
 color-eyre = "0.6"
-common_x = { version = "0.2", features = ["cert", "log"] }
+common_x = { version = "0.3", default-features = false, features = [
+    "cert",
+    "log",
+    "signal",
+] }
 flume = "0.11"
 quinn = "0.10"
 rand = "0.8"
 rand_chacha = "0.3"
-rayon = "1.8"
-rustls = "0.21"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
