--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ common_x = { version = "0.3", default-features = false, features = [
     "signal",
 ] }
 flume = "0.11"
+futures = "0.3"
 quinn = "0.10"
 rand = "0.8"
 rand_chacha = "0.3"
