--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ common_x = { version = "0.3", default-features = false, features = [
 flume = "0.11"
 futures = "0.3"
 quinn = "0.10"
+ractor = "0.9"
 rand = "0.8"
 rand_chacha = "0.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -54,8 +55,8 @@ panic = "abort"
 
 [lints.rust]
 unsafe_code = "forbid"
-missing_copy_implementations = "warn"
-missing_debug_implementations = "warn"
+# missing_copy_implementations = "warn"
+# missing_debug_implementations = "warn"
 # unused_crate_dependencies = "warn"
 unused_extern_crates = "warn"
 
