--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,17 @@ default = []
 [dependencies]
 bincode = "1.3"
 bitflags = "2.4"
+clap = { version = "4.4", features = ["derive"] }
 color-eyre = "0.6"
 common_x = { version = "0.3", default-features = false, features = [
     "cert",
+    "config",
     "log",
     "signal",
 ] }
 flume = "0.11"
 futures = "0.3"
+hex = "0.4"
 quinn = "0.10"
 ractor = "0.9"
 rand = "0.8"
