--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,15 @@ flume = "0.11"
 futures = "0.3"
 hex = "0.4"
 quinn = "0.10"
-ractor = "0.9"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
 uhlc = "0.6"
+
+[dev-dependencies]
+ractor = "0.9"
+rkyv = "0.7"
 
 [profile.dev]
 debug = true
@@ -48,14 +51,14 @@ overflow-checks = true
 lto = false
 
 [profile.release]
-debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
+debug = false
 lto = "fat"
 codegen-units = 1
 opt-level = 3
 panic = "abort"
 
 [lints.rust]
-unsafe_code = "forbid"
+# unsafe_code = "forbid"
 # missing_copy_implementations = "warn"
 # missing_debug_implementations = "warn"
 # unused_crate_dependencies = "warn"
