--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ common_x = { version = "0.3", default-features = false, features = [
 flume = "0.11"
 futures = "0.3"
 hex = "0.4"
+mini-moka = "0.10"
 quinn = "0.10"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
