--- a/config/peer0.toml
+++ b/config/peer0.toml
@@ -1,6 +1,6 @@
 id = "0000000000000000000000000000000a"
 listen = "[::]:9000"
-connect = []
+connect = ["127.0.0.1:9001", "127.0.0.1:9002"]
 cert_path = "./config/cert/client_cert.pem"
 private_key_path = "./config/cert/client_key.pem"
 ca_path = "./config/cert/ca_cert.pem"
