--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eldegoss"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 description = "eldegoss net"
 readme = "README.md"
@@ -35,10 +35,6 @@ tokio = { version = "1.34", features = ["full"] }
 tracing = "0.1"
 uhlc = "0.6"
 
-[dev-dependencies]
-ractor = "0.9"
-rkyv = "0.7"
-
 [profile.dev]
 debug = true
 opt-level = 0
@@ -59,7 +55,7 @@ opt-level = 3
 panic = "abort"
 
 [lints.rust]
-# unsafe_code = "forbid"
+unsafe_code = "forbid"
 # missing_copy_implementations = "warn"
 # missing_debug_implementations = "warn"
 # unused_crate_dependencies = "warn"
