--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eldegoss"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "eldegoss net"
 readme = "README.md"
@@ -15,26 +15,27 @@ default = []
 
 [dependencies]
 bincode = "1.3"
-bitflags = "2.4"
-clap = { version = "4.4", features = ["derive"] }
+bitflags = "2.5"
+clap = { version = "4.5", features = ["derive"] }
 color-eyre = "0.6"
-common_x = { version = "0.3", default-features = false, features = [
+common_x = { version = "0.4", default-features = false, features = [
     "tls",
     "config",
     "graceful",
     "log",
     "signal",
 ] }
+dashmap = { version = "5.5", features = ["serde"] }
 flume = "0.11"
 futures = "0.3"
 hex = "0.4"
 mini-moka = "0.10"
-quinn = "0.10"
+quinn = { version = "0.11", features = ["ring"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.34", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-uhlc = "0.6"
+uhlc = "0.7"
 
 [profile.dev]
 debug = true
