--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eldegoss"
-version = "0.2.4"
+version = "0.3.0"
 edition = "2021"
 description = "eldegoss net"
 readme = "README.md"
@@ -18,7 +18,7 @@ bincode = "1.3"
 bitflags = "2.5"
 clap = { version = "4.5", features = ["derive"] }
 color-eyre = "0.6"
-common_x = { version = "0.4", default-features = false, features = [
+common_x = { version = "0.4", path = "../common_x", default-features = false, features = [
     "tls",
     "config",
     "graceful",
@@ -31,7 +31,9 @@ hex = "0.4"
 mini-moka = "0.10"
 quinn = { version = "0.11", features = ["ring"] }
 rand = "0.8"
+regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
+strum = { version = "0.26", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 uhlc = "0.7"
