--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ keywords = ["network", "p2p", "gossip", "pubsub"]
 default = []
 
 [dependencies]
-bincode = "1.3"
-bitflags = "2.5"
+bincode = { version = "1.3", default-features = false }
+bytes = { version = "1.6", default-features = false, features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 color-eyre = "0.6"
 common_x = { version = "0.4", path = "../common_x", default-features = false, features = [
@@ -26,14 +26,11 @@ common_x = { version = "0.4", path = "../common_x", default-features = false, fe
     "signal",
 ] }
 flume = "0.11"
-futures = "0.3"
-hex = "0.4"
+foca = { version = "0.17", features = ["tracing", "bincode-codec"] }
 mini-moka = "0.10"
 quinn = { version = "0.11", features = ["ring"] }
 rand = "0.8"
-regex = "1.10"
 serde = { version = "1.0", features = ["derive"] }
-strum = { version = "0.26", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 uhlc = "0.7"
