--- a/config/peer2.toml
+++ b/config/peer2.toml
@@ -1,7 +1,7 @@
-id = "0000000000000000000000000000000c"
+# id = ""
 listen = "[::]:9002"
-connect = ["127.0.0.1:9000", "127.0.0.1:9001"]
+connect = ["127.0.0.1:9000"]
+announce = ["1f2828973a5e062ec8dedf33d9b5590d"]
 cert_path = "./config/cert/client_cert.pem"
 private_key_path = "./config/cert/client_key.pem"
 ca_path = "./config/cert/ca_cert.pem"
-subscription_list = ["topic"]
