--- a/config/peer3.toml
+++ b/config/peer3.toml
@@ -1,6 +1,7 @@
 # id = ""
 listen = "[::]:9003"
 connect = ["127.0.0.1:9002"]
+# connect = ["127.0.0.1:9000"]
 cert_path = "./config/cert/client_cert.pem"
 private_key_path = "./config/cert/client_key.pem"
 ca_path = "./config/cert/ca_cert.pem"
