--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eldegoss"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 description = "eldegoss net"
 readme = "README.md"
@@ -8,7 +8,7 @@ repository = "https://github.com/prime-rs/eldegoss"
 license = "Apache-2.0"
 authors = ["JLer <jlerxky@live.com>"]
 categories = ["network-programming"]
-keywords = ["network", "p2p", "gossip", "pubsub"]
+keywords = ["network", "p2p", "gossip", "swim", "quic", "foca"]
 
 [features]
 default = []
@@ -18,7 +18,7 @@ bincode = { version = "1.3", default-features = false }
 bytes = { version = "1.6", default-features = false, features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 color-eyre = "0.6"
-common_x = { version = "0.4", path = "../common_x", default-features = false, features = [
+common_x = { version = "0.5", default-features = false, features = [
     "tls",
     "config",
     "graceful",
