--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,8 @@
-[package]
-name = "eldegoss"
-version = "0.4.0"
-edition = "2021"
-description = "eldegoss net"
-readme = "README.md"
-repository = "https://github.com/prime-rs/eldegoss"
-license = "Apache-2.0"
-authors = ["JLer <jlerxky@live.com>"]
-categories = ["network-programming"]
-keywords = ["p2p", "gossip", "swim", "quic", "foca"]
+[workspace]
+resolver = "2"
+members = ["eldegoss", "plugins/dispatch"]
 
-[features]
-default = []
-
-[dependencies]
+[workspace.dependencies]
 bincode = { version = "1.3", default-features = false }
 bytes = { version = "1.6", default-features = false, features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
@@ -25,41 +14,37 @@ common_x = { version = "0.5", default-features = false, features = [
     "log",
     "signal",
 ] }
+extism = "1.4"
+extism-pdk = "1.2"
 flume = "0.11"
 foca = { version = "0.17", features = ["tracing", "bincode-codec"] }
 mini-moka = "0.10"
+notify = { version = "6.1", features = ["serde"] }
+parking_lot = "0.12"
 quinn = { version = "0.11", features = ["ring"] }
 rand = "0.8"
+rust-embed="8.4"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-uhlc = "0.7"
+uhlc = "0.8"
 
 [profile.dev]
-debug = true
-opt-level = 0
-
-[profile.fast]
-inherits = "release"
+debug = 0
 opt-level = 3
-debug = true
-debug-assertions = true
-overflow-checks = true
-lto = false
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.release]
-debug = false
-lto = "fat"
+lto = "thin"
+opt-level = "s"
 codegen-units = 1
-opt-level = 3
-panic = "abort"
 
-[lints.rust]
+[workspace.lints.rust]
 unsafe_code = "forbid"
-# missing_copy_implementations = "warn"
-# missing_debug_implementations = "warn"
-# unused_crate_dependencies = "warn"
+unused_crate_dependencies = "warn"
 unused_extern_crates = "warn"
 
-[lints.clippy]
+[workspace.lints.clippy]
 missing_const_for_fn = "warn"
