--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["eldegoss", "plugins/dispatch"]
+members = ["eldegoss"]
 
 [workspace.dependencies]
 bincode = { version = "1.3", default-features = false }
@@ -14,16 +14,11 @@ common_x = { version = "0.5", default-features = false, features = [
     "log",
     "signal",
 ] }
-extism = "1.4"
-extism-pdk = "1.2"
 flume = "0.11"
 foca = { version = "0.17", features = ["tracing", "bincode-codec"] }
 mini-moka = "0.10"
-notify = { version = "6.1", features = ["serde"] }
-parking_lot = "0.12"
 quinn = { version = "0.11", features = ["ring"] }
 rand = "0.8"
-rust-embed="8.4"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
@@ -43,7 +38,7 @@ codegen-units = 1
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
-unused_crate_dependencies = "warn"
+# unused_crate_dependencies = "warn"
 unused_extern_crates = "warn"
 
 [workspace.lints.clippy]
