--- a/eldegoss/Cargo.toml
+++ b/eldegoss/Cargo.toml
@@ -3,7 +3,7 @@ name = "eldegoss"
 version = "0.5.0"
 edition = "2021"
 description = "eldegoss net"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/prime-rs/eldegoss"
 license = "Apache-2.0"
 authors = ["JLer <jlerxky@live.com>"]
