--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [workspace]
 resolver = "2"
-members = ["eldegoss"]
+members = ["eldegoss", "eldegoss_router"]
+
+[workspace.package]
+version = "0.6.0"
+edition = "2021"
+authors = ["JLer <jlerxky@live.com>"]
 
 [workspace.dependencies]
 bincode = { version = "1.3", default-features = false }
 bytes = { version = "1.9", default-features = false, features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
-color-eyre = "0.6"
+color-eyre = { version = "0.6", default-features = false }
 common_x = { version = "0.6", default-features = false, features = [
     "tls",
     "config",
@@ -23,6 +28,8 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 uhlc = "0.8"
+openssl = { version = "0.10", features = ["vendored"] }
+
 
 [profile.dev]
 debug = 0
