--- a/config/peer.toml
+++ b/config/peer.toml
@@ -1,6 +1,6 @@
 # id = "1f2828973a5e062ec8dedf33d9b5590d"
-listen = "[::]:9000"
-connect = ["127.0.0.1:9001"]
+listen = "[::]:9210"
+connect = ["unown.io:9210"]
 cert_path = "./config/cert/client_cert.pem"
 private_key_path = "./config/cert/client_key.pem"
 ca_path = "./config/cert/ca_cert.pem"
